--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -19,7 +19,9 @@
 name: Snyk Security
 
 on:
-  workflow_dispatch
+  pull_request:
+    types: [opened, reopened]
+
 
 permissions:
   contents: read
