--- a/.harness/orgs/default/projects/default_project/pipelines/harness_pipeline.yaml
+++ b/.harness/orgs/default/projects/default_project/pipelines/harness_pipeline.yaml
@@ -12,7 +12,7 @@ pipeline:
         build: <+input>
   stages:
     - stage:
-        name: Checkmarx
+        name: SAST
         identifier: Checkmarx
         description: ""
         type: CI
@@ -21,6 +21,7 @@ pipeline:
           caching:
             enabled: true
             override: true
+            paths: []
           platform:
             os: Linux
             arch: Amd64
@@ -43,3 +44,5 @@ pipeline:
                       args: {}
                     mode: orchestration
                     config: default
+          buildIntelligence:
+            enabled: false
