Update pipeline harness_pipeline

--- a/.harness/orgs/default/projects/default_project/pipelines/harness_pipeline.yaml
+++ b/.harness/orgs/default/projects/default_project/pipelines/harness_pipeline.yaml
@@ -49,5 +49,14 @@ pipeline:
                       type: apiKey
                     tool:
                       project_name: Webgoat
+              - step:
+                  type: Run
+                  name: Mobb Autofixer
+                  identifier: Mobb_Autofixer
+                  spec:
+                    shell: Sh
+                    command: |-
+                      ls -la
+                      npx mobbdev@latest
           buildIntelligence:
             enabled: false
