Update pipeline harness_pipeline

--- a/.harness/orgs/default/projects/default_project/pipelines/harness_pipeline.yaml
+++ b/.harness/orgs/default/projects/default_project/pipelines/harness_pipeline.yaml
@@ -57,10 +57,11 @@ pipeline:
                   name: Mobb Autofixer
                   identifier: Mobb_Autofixer
                   spec:
-                    shell: Sh
+                    connectorRef: account.harnessImage
                     image: node:20
+                    shell: Sh
                     command: |-
-                      ls -la
-                      npx mobbdev@latest
+                      ls -lahR
+                      npx mobbdev@latest --help
           buildIntelligence:
             enabled: false
