--- a/.harness/orgs/default/projects/default_project/pipelines/harness_pipeline.yaml
+++ b/.harness/orgs/default/projects/default_project/pipelines/harness_pipeline.yaml
@@ -30,47 +30,47 @@ pipeline:
             spec: {}
           execution:
             steps:
-              - parallel:
-                  - step:
-                      type: CheckmarxOne
-                      name: CheckmarxOne_1
-                      identifier: CheckmarxOne_1
-                      spec:
-                        mode: orchestration
-                        config: default
-                        target:
-                          type: repository
-                          detection: auto
-                        advanced:
-                          log:
-                            level: info
-                          fail_on_severity: none
-                          args:
-                            cli: "--output-path ."
-                        auth:
-                          access_token: <+secrets.getValue("org.cx-token")>
-                          type: apiKey
-                        tool:
-                          project_name: Webgoat
-                  - step:
-                      type: Run
-                      name: Mobb Autofixer
-                      identifier: Mobb_Autofixer
-                      spec:
-                        connectorRef: account.harnessImage
-                        image: node:20
-                        shell: Sh
-                        command: |-
-                          echo "Running Mobb with cx_result.json..."
-                          ls -lah
-                          env
-                          npx mobbdev@latest analyze \
-                            -f cx_result.json \
-                            -r "$CI_REPO_REMOTE" \
-                            --ref "$CI_COMMIT_BRANCH" \
-                            --api-key <+secrets.getValue("org.mobb_api_token")>
-                      when:
-                        stageStatus: All
+              - step:
+                  type: CheckmarxOne
+                  name: CheckmarxOne_1
+                  identifier: CheckmarxOne_1
+                  spec:
+                    mode: orchestration
+                    config: default
+                    target:
+                      type: repository
+                      detection: auto
+                    advanced:
+                      log:
+                        level: info
+                      fail_on_severity: none
+                      args:
+                        cli: "--output-path ."
+                    auth:
+                      access_token: <+secrets.getValue("org.cx-token")>
+                      type: apiKey
+                    tool:
+                      project_name: Webgoat
+              - step:
+                  type: Run
+                  name: Mobb Autofixer
+                  identifier: Mobb_Autofixer
+                  spec:
+                    connectorRef: account.harnessImage
+                    image: node:20
+                    shell: Sh
+                    command: |-
+                      echo "Running Mobb with cx_result.json..."
+                      #ls -lah
+                      #env
+                      npx mobbdev@latest analyze \
+                        -f cx_result.json \
+                        -r "$CI_REPO_REMOTE" \
+                        --ref "$CI_COMMIT_BRANCH" \
+                        --api-key <+secrets.getValue("org.mobb_api_token")> \
+                        --ci
+                  when:
+                    stageStatus: All
           sharedPaths:
             - /shared
           buildIntelligence:
